# plonky2-ed25519

./: Cargo.toml  README.md  test.sh
src/: lib.rs  main.rs
src/curve/: curve_adds.rs  curve_msm.rs  curve_summation.rs  curve_types.rs  ecdsa.rs  ed25519.rs  eddsa.rs  glv.rs  mod.rs
src/field/: ed25519_base.rs  ed25519_scalar.rs  field_testing.rs  mod.rs
src/gadgets/: curve.rs  curve_fixed_base.rs  curve_msm.rs  curve_windowed_mul.rs  curve_windowed_mul_mt.rs  ecdsa.rs  eddsa.rs  glv.rs  mod.rs  nonnative.rs  split_nonnative.rs
