[package]
name = "plonky2_ed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2" }
plonky2_util = { git = "https://github.com/mir-protocol/plonky2" }
plonky2_field = { git = "https://github.com/mir-protocol/plonky2" }
plonky2_u32 = { git = "https://github.com/mir-protocol/plonky2" }
num = "0.4.0"
itertools = "0.10.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.40"
rand = "0.8.4"

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3
